--- a/index.html
+++ b/index.html
@@ -1,7 +1,175 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Academic website of [Your Name], Linguist, Educator, and Researcher.">
+    <title>[Your Name] | Academic Portfolio</title>
+    <style>
+        /* Minimalist Styling */
+        body {
+            font-family: 'Helvetica', Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #fff;
+            color: #000;
+            line-height: 1.6;
+            max-width: 900px;
+            margin: auto;
+            padding: 20px;
+        }
+
+        header {
+            text-align: center;
+            margin-top: 50px;
+        }
+
+        header h1 {
+            font-size: 2.5em;
+            font-weight: 400;
+            margin: 0;
+        }
+
+        header p {
+            font-size: 1.2em;
+            color: #555;
+            margin: 10px 0 30px 0;
+        }
+
+        nav {
+            text-align: center;
+            margin-bottom: 40px;
+        }
+
+        nav a {
+            color: #000;
+            text-decoration: none;
+            margin: 0 15px;
+            font-size: 1.1em;
+            font-weight: 500;
+        }
+
+        nav a:hover {
+            color: #888;
+        }
+
+        section {
+            margin-bottom: 40px;
+        }
+
+        h2 {
+            font-size: 1.8em;
+            font-weight: 400;
+            margin-bottom: 20px;
+        }
+
+        p, ul {
+            font-size: 1.1em;
+            margin-bottom: 20px;
+            color: #333;
+        }
+
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        ul li {
+            margin-bottom: 10px;
+        }
+
+        footer {
+            text-align: center;
+            padding: 20px 0;
+            margin-top: 40px;
+            color: #888;
+            font-size: 0.9em;
+        }
+
+        .profile-img {
+            display: block;
+            margin: 20px auto;
+            width: 120px;
+            height: 120px;
+            border-radius: 50%;
+        }
+
+        a {
+            color: #000;
+            text-decoration: none;
+        }
+
+        a:hover {
+            color: #888;
+        }
+
+        /* Responsive */
+        @media (max-width: 768px) {
+            body {
+                padding: 15px;
+            }
+
+            header h1 {
+                font-size: 2em;
+            }
+
+            nav a {
+                font-size: 1em;
+                margin: 0 10px;
+            }
+
+            h2 {
+                font-size: 1.5em;
+            }
+        }
+    </style>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+
+<header>
+    <h1>[Your Name]</h1>
+    <p>Linguist | Educator | Researcher</p>
+</header>
+
+<nav>
+    <a href="#about">About</a>
+    <a href="#research">Research</a>
+    <a href="#teaching">Teaching</a>
+    <a href="#contact">Contact</a>
+</nav>
+
+<section id="about">
+    <h2>About Me</h2>
+    <img src="profile.jpg" alt="Profile Picture" class="profile-img">
+    <p>I’m [Your Name], a linguist passionate about language teaching, education equality, and bridging the gap between theory and practice in language education.</p>
+</section>
+
+<section id="research">
+    <h2>Research</h2>
+    <p>My research focuses on [Your Research Area], with current projects exploring [brief description]. Here are a few recent publications:</p>
+    <ul>
+        <li><strong>Publication 1:</strong> [Title] – Published in [Journal]</li>
+        <li><strong>Publication 2:</strong> [Title] – Published in [Journal]</li>
+    </ul>
+</section>
+
+<section id="teaching">
+    <h2>Teaching</h2>
+    <p>I teach courses in [Your Teaching Area]. My goal is to inspire curiosity and foster inclusivity in every classroom. Here are some of the courses I’ve taught:</p>
+    <ul>
+        <li><strong>Course 1:</strong> [Course Name] – [Brief description]</li>
+        <li><strong>Course 2:</strong> [Course Name] – [Brief description]</li>
+    </ul>
+</section>
+
+<section id="contact">
+    <h2>Contact</h2>
+    <p>Feel free to reach out at: <a href="mailto:youremail@example.com">youremail@example.com</a></p>
+</section>
+
+<footer>
+    <p>&copy; 2024 [Your Name] | All Rights Reserved</p>
+</footer>
+
 </body>
 </html>
