--- a/index.html
+++ b/index.html
@@ -55,20 +55,22 @@
 
 <header>
     <h1>Juan Zhong</h1>
-    <p>钟娟/鍾娟 /[t͡ɕy̯ɛn⁵⁵t͡ʃ̪ũ̟ŋ⁵⁵/]</p>
+    <p> 钟娟 鍾娟 [t͡ɕy̯ɛn⁵⁵t͡ʃ̪ũ̟ŋ⁵⁵] </p>
+    <p> she/her </p>
 </header>
 
 <nav>
     <a href="#about">About</a>
     <a href="#research">Research</a>
     <a href="#teaching">Teaching</a>
+    <a href="#teaching">CV</a>
     <a href="#contact">Contact</a>
 </nav>
 
 <section id="about">
     <h2>About Me</h2>
     <img src="profile.jpg" alt="Profile Picture" class="profile-img">
-    <p>IHi, I’m Juan Zhong, a second-year PhD student in linguistics at Univeristy at BUffalo. I work on morphosyntax, pragmatics, and language documentation.</p>
+    <p>Hi, I’m Juan Zhong, a second-year PhD student in linguistics at Univeristy at BUffalo. I work on morphosyntax, pragmatics, and language documentation.</p>
 </section>
 
 <section id="research">
@@ -85,6 +87,10 @@
         <li>Course 1 – [Brief description]</li>
         <li>Course 2 – [Brief description]</li>
     </ul>
+</section>
+    
+<section id="CV">
+    <h2>CV</h2>
 </section>
 
 <section id="contact">
