--- a/index.html
+++ b/index.html
@@ -1,106 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Academic website of [Your Name], Linguist, Educator, and Researcher.">
-    <title>[Your Name] | Academic Portfolio</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 20px;
-            max-width: 800px;
-            margin: auto;
-            line-height: 1.6;
-            color: #000;
-        }
-
-        h1, h2 {
-            text-align: center;
-        }
-
-        nav {
-            text-align: center;
-            margin: 20px 0;
-        }
-
-        nav a {
-            margin: 0 15px;
-            color: #000;
-            text-decoration: none;
-        }
-
-        section {
-            margin: 40px 0;
-        }
-
-        footer {
-            text-align: center;
-            margin-top: 40px;
-            font-size: 0.8em;
-            color: #666;
-        }
-
-        .profile-img {
-            display: block;
-            margin: 20px auto;
-            width: 120px;
-            height: 120px;
-            border-radius: 50%;
-        }
-    </style>
-</head>
+<html>
 <body>
-
-<header>
-    <h1>Juan Zhong</h1>
-    <p> 钟娟 鍾娟 [t͡ɕy̯ɛn⁵⁵t͡ʃ̪ũ̟ŋ⁵⁵] </p>
-    <p> she/her </p>
-</header>
-
-<nav>
-    <a href="#about">About</a>
-    <a href="#research">Research</a>
-    <a href="#teaching">Teaching</a>
-    <a href="#teaching">CV</a>
-    <a href="#contact">Contact</a>
-</nav>
-
-<section id="about">
-    <h2>About Me</h2>
-    <img src="profile.jpg" alt="Profile Picture" class="profile-img">
-    <p>Hi, I’m Juan Zhong, a second-year PhD student in linguistics at Univeristy at BUffalo. I work on morphosyntax, pragmatics, and language documentation.</p>
-</section>
-
-<section id="research">
-    <h2>Research</h2>
-    <ul>
-        <li>Publication 1 – Published in [Journal]</li>
-        <li>Publication 2 – Published in [Journal]</li>
-    </ul>
-</section>
-
-<section id="teaching">
-    <h2>Teaching</h2>
-    <ul>
-        <li>Course 1 – [Brief description]</li>
-        <li>Course 2 – [Brief description]</li>
-    </ul>
-</section>
-    
-<section id="CV">
-    <h2>CV</h2>
-</section>
-
-<section id="contact">
-    <h2>Contact</h2>
-    <p>Email me at: <a href="mailto:juanzhon@buffalo.edu">juanzhon@buffalo.edu</a></p>
-</section>
+<h1>
+    Juan Zhong
+</h1>
+<p>
+    <a href="mailto:juanzhon@buffalo.edu">juanzhon@buffalo.edu</a>
+</p>
+<p>
+    Hi, I'm Juan Zhong, a second-year PhD student in linguistics at Univerisity at Buffalo.
+</p>
 
 <footer>
     <p>&copy; 2024 Juan Zhong | All Rights Reserved</p>
 </footer>
-
+    
 </body>
 </html>
