--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     Hi, I'm Juan Zhong, a second-year PhD student in linguistics at Univerisity at Buffalo.
 </p>
 
+    <a href="/juan-zhong.github.io/CV_JZ_04062024.pdf" target="_blank">CV</a>
+
 <footer>
     <p>&copy; 2024 Juan Zhong | All Rights Reserved</p>
 </footer>
