--- a/index.html
+++ b/index.html
@@ -5,13 +5,22 @@
     Juan Zhong
 </h1>
 <p>
+    钟娟/鍾娟
+</p>
+<p>
+    [t͡ɕy̯ɛn⁵⁵t͡ʃ̪ũ̟ŋ⁵⁵]
+</p>
+<p>
+    she/her
+</p>
+<p>
     <a href="mailto:juanzhon@buffalo.edu">juanzhon@buffalo.edu</a>
 </p>
 <p>
     Hi, I'm Juan Zhong, a second-year PhD student in linguistics at Univerisity at Buffalo.
 </p>
 
-    <a href="/juan-zhong.github.io/CV_JZ_04062024.pdf" target="_blank">CV</a>
+    <a href="/juan-zhong.github.io/me/CV_JZ_04062024.pdf" target="_blank">CV</a>
 
 <footer>
     <p>&copy; 2024 Juan Zhong | All Rights Reserved</p>
