--- a/index.html
+++ b/index.html
@@ -14,14 +14,13 @@
     she/her
 </p>
 <p>
-    <a href="mailto:juanzhon@buffalo.edu">juanzhon@buffalo.edu</a>
-</p>
-<p>
     Hi, I'm Juan Zhong, a second-year PhD student in linguistics at Univerisity at Buffalo.
 </p>
 
-    <a href="/juan-zhong.github.io/me/CV_JZ_04062024.pdf" target="_blank">CV</a>
-
+    <a href="/me/CV_JZ_04062024.pdf" target="_blank">CV</a>
+<p>
+    <a href="mailto:juanzhon@buffalo.edu">juanzhon@buffalo.edu</a>
+</p>
 <footer>
     <p>&copy; 2024 Juan Zhong | All Rights Reserved</p>
 </footer>
