--- a/index.html
+++ b/index.html
@@ -14,12 +14,8 @@
     she/her
 </p>
 <p>
-    Hi, I'm Juan Zhong, a second-year PhD student in linguistics at Univerisity at Buffalo.
-</p>
-
-    <a href="/me/CV_JZ_20240918.pdf" target="_blank">CV</a>
-<p>
-    <a href="mailto:juanzhon@buffalo.edu">juanzhon@buffalo.edu</a>
+    Hi, I'm Juan Zhong, a second-year PhD student in linguistics at <a href="https://arts-sciences.buffalo.edu/linguistics.html">University at Buffalo</a>. I work on morphosyntax, pragmatics, and language documentation. Here is my
+ <a href="/me/CV_JZ_20240918.pdf" target="_blank">CV</a>. Feel free to contact me at <a href="mailto:juanzhon@buffalo.edu">juanzhon@buffalo.edu</a> to discuss more about my research.
 </p>
 <footer>
     <p>&copy; 2024 Juan Zhong | All Rights Reserved</p>
