--- a/index.html
+++ b/index.html
@@ -1,25 +1,57 @@
-<!DOCTYPE html>
-<html>
+ <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Juan Zhong</title>
+    <p> juanzhon AT buffalo DOT edu </p>
+    <link rel="stylesheet" href="style.css">
+</head>
 <body>
-<h1>
-    Juan Zhong
-</h1>
-<p>
-    钟娟/鍾娟
+
+    <header>
+        <h1>Juan Zhong</h1>
+        <nav>
+            <ul>
+                <li><a href="#intro">About Me</a></li>
+                <li><a href="#research">Research</a></li>
+                <li><a href="#teaching">Teaching</a></li>
+                <li><a href="#service">Service</a></li>
+                <li><a href="#artworks">Artworks</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section id="intro">
+        <h2>About Me</h2>
+        <p>  Hi, I'm Juan Zhong, a second-year PhD student in linguistics at <a href="https://arts-sciences.buffalo.edu/linguistics.html">University at Buffalo</a>. I work on morphosyntax, pragmatics, and language documentation. Here is my <a href="/me/CV_JZ_20240918.pdf" target="_blank">CV</a>. Feel free to email me to discuss more about my research.
 </p>
-<p>
-    [t͡ɕy̯ɛn⁵⁵t͡ʃ̪ũ̟ŋ⁵⁵]
-</p>
-<p>
-    she/her
-</p>
-<p>
-    Hi, I'm Juan Zhong, a second-year PhD student in linguistics at <a href="https://arts-sciences.buffalo.edu/linguistics.html">University at Buffalo</a>. I work on morphosyntax, pragmatics, and language documentation. Here is my
- <a href="/me/CV_JZ_20240918.pdf" target="_blank">CV</a>. Feel free to contact me at <a href="mailto:juanzhon@buffalo.edu">juanzhon@buffalo.edu</a> to discuss more about my research.
-</p>
-<footer>
-    <p>&copy; 2024 Juan Zhong | All Rights Reserved</p>
-</footer>
-    
+    </section>
+
+    <section id="research">
+        <h2>Research</h2>
+        <p>Overview of your research topics, key papers, and interests in linguistics.</p>
+    </section>
+
+    <section id="teaching">
+        <h2>Teaching</h2>
+        <p>Details of the courses you have taught, your teaching philosophy, and relevant experiences.</p>
+    </section>
+
+    <section id="service">
+        <h2>Service</h2>
+        <p>List your academic services like committees, editorial work, or contributions to the university.</p>
+    </section>
+
+    <section id="artworks">
+        <h2>Artworks</h2>
+        <p>Share your personal artworks here. You can include descriptions, galleries, or even a portfolio link.</p>
+    </section>
+
+    <footer>
+        <p>&copy; 2024 Your Name | Built with HTML & CSS</p>
+    </footer>
+
 </body>
 </html>
