--- a/index.html
+++ b/index.html
@@ -1,17 +1,21 @@
+ Hi, I'm Juan Zhong, a second-year PhD student in linguistics at <a href="https://arts-sciences.buffalo.edu/linguistics.html">University at Buffalo</a>. I work on morphosyntax, pragmatics, and language documentation. Here is my <a href="/me/CV_JZ_20240918.pdf" target="_blank">CV</a>. Feel free to email me to discuss more about my research.
+
  <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Juan Zhong</title>
-    <p> juanzhon AT buffalo DOT edu </p>
+    <title>Your Name | Academic Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
     <header>
-        <h1>Juan Zhong</h1>
+        <div class="overlay"></div>
+        <h1>Your Name</h1>
+        <p>PhD Student in Linguistics</p>
         <nav>
             <ul>
                 <li><a href="#intro">About Me</a></li>
@@ -23,31 +27,32 @@
         </nav>
     </header>
 
-    <section id="intro">
-        <h2>About Me</h2>
-        <p>  Hi, I'm Juan Zhong, a second-year PhD student in linguistics at <a href="https://arts-sciences.buffalo.edu/linguistics.html">University at Buffalo</a>. I work on morphosyntax, pragmatics, and language documentation. Here is my <a href="/me/CV_JZ_20240918.pdf" target="_blank">CV</a>. Feel free to email me to discuss more about my research.
-</p>
-    </section>
+    <main>
+        <section id="intro">
+            <h2>About Me</h2>
+            <p>Brief introduction of yourself. Mention your academic journey, interests, and aspirations.</p>
+        </section>
 
-    <section id="research">
-        <h2>Research</h2>
-        <p>Overview of your research topics, key papers, and interests in linguistics.</p>
-    </section>
+        <section id="research">
+            <h2>Research</h2>
+            <p>Overview of your research topics, key papers, and interests in linguistics.</p>
+        </section>
 
-    <section id="teaching">
-        <h2>Teaching</h2>
-        <p>Details of the courses you have taught, your teaching philosophy, and relevant experiences.</p>
-    </section>
+        <section id="teaching">
+            <h2>Teaching</h2>
+            <p>Details of the courses you have taught, your teaching philosophy, and relevant experiences.</p>
+        </section>
 
-    <section id="service">
-        <h2>Service</h2>
-        <p>List your academic services like committees, editorial work, or contributions to the university.</p>
-    </section>
+        <section id="service">
+            <h2>Service</h2>
+            <p>List your academic services like committees, editorial work, or contributions to the university.</p>
+        </section>
 
-    <section id="artworks">
-        <h2>Artworks</h2>
-        <p>Share your personal artworks here. You can include descriptions, galleries, or even a portfolio link.</p>
-    </section>
+        <section id="artworks">
+            <h2>Artworks</h2>
+            <p>Share your personal artworks here. You can include descriptions, galleries, or even a portfolio link.</p>
+        </section>
+    </main>
 
     <footer>
         <p>&copy; 2024 Your Name | Built with HTML & CSS</p>
