--- a/index.html
+++ b/index.html
@@ -1,62 +1,182 @@
  Hi, I'm Juan Zhong, a second-year PhD student in linguistics at <a href="https://arts-sciences.buffalo.edu/linguistics.html">University at Buffalo</a>. I work on morphosyntax, pragmatics, and language documentation. Here is my <a href="/me/CV_JZ_20240918.pdf" target="_blank">CV</a>. Feel free to email me to discuss more about my research.
 
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Your Name | Academic Portfolio</title>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
+    <meta name="description" content="Academic website of [Your Name], Linguist, Educator, and Researcher.">
+    <title>[Your Name] | Academic Portfolio</title>
+    <style>
+        /* General Styling */
+        body {
+            font-family: 'Helvetica Neue', Arial, sans-serif;
+            background-color: #f5f5f5;
+            color: #333;
+            margin: 0;
+            padding: 20px;
+            max-width: 900px;
+            margin: auto;
+            line-height: 1.7;
+        }
+
+        header {
+            text-align: center;
+            margin-top: 50px;
+        }
+
+        header h1 {
+            font-size: 2.5em;
+            color: #333;
+            font-weight: 600;
+            margin-bottom: 10px;
+        }
+
+        header p {
+            font-size: 1.2em;
+            color: #666;
+        }
+
+        nav {
+            text-align: center;
+            margin: 30px 0;
+        }
+
+        nav a {
+            color: #0066cc;
+            text-decoration: none;
+            margin: 0 20px;
+            font-size: 1.1em;
+            font-weight: 500;
+        }
+
+        nav a:hover {
+            color: #004080;
+        }
+
+        section {
+            margin-bottom: 40px;
+            background-color: #fff;
+            padding: 30px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
+        }
+
+        h2 {
+            font-size: 1.8em;
+            color: #333;
+            margin-bottom: 20px;
+            font-weight: 500;
+        }
+
+        p {
+            font-size: 1.1em;
+            color: #666;
+        }
+
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        ul li {
+            margin-bottom: 10px;
+            font-size: 1.1em;
+            color: #444;
+        }
+
+        .profile-img {
+            display: block;
+            margin: 20px auto;
+            width: 120px;
+            height: 120px;
+            border-radius: 50%;
+            border: 2px solid #0066cc;
+        }
+
+        footer {
+            text-align: center;
+            padding: 20px;
+            margin-top: 40px;
+            font-size: 0.9em;
+            color: #666;
+        }
+
+        a {
+            color: #0066cc;
+            text-decoration: none;
+        }
+
+        a:hover {
+            color: #004080;
+        }
+
+        /* Responsive adjustments */
+        @media (max-width: 768px) {
+            header h1 {
+                font-size: 2em;
+            }
+
+            nav a {
+                font-size: 1em;
+                margin: 0 10px;
+            }
+
+            h2 {
+                font-size: 1.5em;
+            }
+        }
+    </style>
 </head>
 <body>
 
-    <header>
-        <div class="overlay"></div>
-        <h1>Your Name</h1>
-        <p>PhD Student in Linguistics</p>
-        <nav>
-            <ul>
-                <li><a href="#intro">About Me</a></li>
-                <li><a href="#research">Research</a></li>
-                <li><a href="#teaching">Teaching</a></li>
-                <li><a href="#service">Service</a></li>
-                <li><a href="#artworks">Artworks</a></li>
-            </ul>
-        </nav>
-    </header>
+<header>
+    <h1>[Your Name]</h1>
+    <p>Linguist | Educator | Researcher</p>
+</header>
 
-    <main>
-        <section id="intro">
-            <h2>About Me</h2>
-            <p>Brief introduction of yourself. Mention your academic journey, interests, and aspirations.</p>
-        </section>
+<nav>
+    <a href="#about">About</a>
+    <a href="#research">Research</a>
+    <a href="#teaching">Teaching</a>
+    <a href="#contact">Contact</a>
+</nav>
 
-        <section id="research">
-            <h2>Research</h2>
-            <p>Overview of your research topics, key papers, and interests in linguistics.</p>
-        </section>
+<section id="about">
+    <h2>About Me</h2>
+    <img src="profile.jpg" alt="Profile Picture" class="profile-img">
+    <p>I’m [Your Name], a linguist passionate about language teaching, education equality, and bridging the gap between theory and practice in language education.</p>
+</section>
 
-        <section id="teaching">
-            <h2>Teaching</h2>
-            <p>Details of the courses you have taught, your teaching philosophy, and relevant experiences.</p>
-        </section>
+<section id="research">
+    <h2>Research</h2>
+    <p>My research focuses on [Your Research Area], with current projects exploring [brief description]. Here are a few recent publications:</p>
+    <ul>
+        <li><strong>Publication 1:</strong> [Title] – Published in [Journal]</li>
+        <li><strong>Publication 2:</strong> [Title] – Published in [Journal]</li>
+    </ul>
+</section>
 
-        <section id="service">
-            <h2>Service</h2>
-            <p>List your academic services like committees, editorial work, or contributions to the university.</p>
-        </section>
+<section id="teaching">
+    <h2>Teaching</h2>
+    <p>I teach courses in [Your Teaching Area]. My goal is to inspire curiosity and foster inclusivity in every classroom. Here are some of the courses I’ve taught:</p>
+    <ul>
+        <li><strong>Course 1:</strong> [Course Name] – [Brief description]</li>
+        <li><strong>Course 2:</strong> [Course Name] – [Brief description]</li>
+    </ul>
+</section>
 
-        <section id="artworks">
-            <h2>Artworks</h2>
-            <p>Share your personal artworks here. You can include descriptions, galleries, or even a portfolio link.</p>
-        </section>
-    </main>
+<section id="contact">
+    <h2>Contact</h2>
+    <p>Feel free to reach out at: <a href="mailto:youremail@example.com">youremail@example.com</a></p>
+</section>
 
-    <footer>
-        <p>&copy; 2024 Your Name | Built with HTML & CSS</p>
-    </footer>
+<footer>
+    <p>&copy; 2024 [Your Name] | All Rights Reserved</p>
+</footer>
+
+</body>
+</html>
 
 </body>
 </html>
