--- a/index.html
+++ b/index.html
@@ -5,125 +5,131 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Academic website of [Your Name], Linguist, Educator, and Researcher.">
-    <title>[Your Name] | Academic Portfolio</title>
+    <title>Juan Zhong | Academic Portfolio</title>
     <style>
-        /* General Styling */
+        /* Le Labo-inspired Styling */
         body {
-            font-family: 'Helvetica Neue', Arial, sans-serif;
-            background-color: #f5f5f5;
-            color: #333;
+            font-family: 'Courier New', Courier, monospace;
+            background-color: #f2f2f2;
+            color: #000;
             margin: 0;
             padding: 20px;
             max-width: 900px;
             margin: auto;
-            line-height: 1.7;
+            line-height: 1.8;
+            text-align: left;
         }
 
         header {
             text-align: center;
-            margin-top: 50px;
+            margin-top: 80px;
         }
 
         header h1 {
-            font-size: 2.5em;
-            color: #333;
-            font-weight: 600;
+            font-size: 3em;
+            letter-spacing: 2px;
+            font-weight: 700;
             margin-bottom: 10px;
         }
 
         header p {
             font-size: 1.2em;
-            color: #666;
+            color: #555;
+            letter-spacing: 1px;
+            font-weight: 400;
         }
 
         nav {
             text-align: center;
-            margin: 30px 0;
+            margin: 50px 0;
         }
 
         nav a {
-            color: #0066cc;
+            color: #000;
             text-decoration: none;
+            font-size: 1.2em;
             margin: 0 20px;
-            font-size: 1.1em;
+            text-transform: uppercase;
             font-weight: 500;
         }
 
         nav a:hover {
-            color: #004080;
+            border-bottom: 2px solid #000;
         }
 
         section {
-            margin-bottom: 40px;
             background-color: #fff;
-            padding: 30px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-            border-radius: 8px;
+            padding: 40px;
+            margin-bottom: 50px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            border-radius: 5px;
         }
 
         h2 {
             font-size: 1.8em;
-            color: #333;
+            font-weight: 600;
+            letter-spacing: 1px;
             margin-bottom: 20px;
-            font-weight: 500;
         }
 
         p {
             font-size: 1.1em;
-            color: #666;
+            color: #333;
+            letter-spacing: 0.5px;
         }
 
         ul {
-            list-style-type: none;
+            list-style: none;
             padding: 0;
         }
 
         ul li {
-            margin-bottom: 10px;
             font-size: 1.1em;
-            color: #444;
+            margin-bottom: 10px;
         }
 
         .profile-img {
             display: block;
-            margin: 20px auto;
-            width: 120px;
-            height: 120px;
+            margin: 30px auto;
+            width: 150px;
+            height: 150px;
             border-radius: 50%;
-            border: 2px solid #0066cc;
+            border: 3px solid #000;
         }
 
         footer {
             text-align: center;
-            padding: 20px;
-            margin-top: 40px;
+            padding: 40px 0;
             font-size: 0.9em;
             color: #666;
         }
 
         a {
-            color: #0066cc;
+            color: #000;
             text-decoration: none;
         }
 
         a:hover {
-            color: #004080;
+            color: #555;
+            border-bottom: 1px solid #555;
         }
 
-        /* Responsive adjustments */
+        /* Responsive Design */
         @media (max-width: 768px) {
+            body {
+                padding: 15px;
+            }
+
             header h1 {
-                font-size: 2em;
+                font-size: 2.5em;
             }
 
             nav a {
-                font-size: 1em;
-                margin: 0 10px;
+                font-size: 1.1em;
             }
 
             h2 {
-                font-size: 1.5em;
+                font-size: 1.6em;
             }
         }
     </style>
@@ -131,7 +137,7 @@
 <body>
 
 <header>
-    <h1>[Your Name]</h1>
+    <h1>Juan Zhong</h1>
     <p>Linguist | Educator | Researcher</p>
 </header>
 
@@ -145,7 +151,7 @@
 <section id="about">
     <h2>About Me</h2>
     <img src="profile.jpg" alt="Profile Picture" class="profile-img">
-    <p>I’m [Your Name], a linguist passionate about language teaching, education equality, and bridging the gap between theory and practice in language education.</p>
+    <p>I'm Juan Zhong, a second-year PhD student in linguistics at the University at Buffalo. My work focuses on language teaching and education equality, and I am passionate about bridging the gap between theory and practice in language education.</p>
 </section>
 
 <section id="research">
@@ -172,11 +178,8 @@
 </section>
 
 <footer>
-    <p>&copy; 2024 [Your Name] | All Rights Reserved</p>
+    <p>&copy; 2024 Juan Zhong | All Rights Reserved</p>
 </footer>
-
-</body>
-</html>
 
 </body>
 </html>
