--- a/index.html
+++ b/index.html
@@ -10,42 +10,46 @@
 </head>
 <body>
     <header>
-        <h1>Your Name</h1>
         <nav>
-            <a href="#about">About Me</a>
-            <a href="#research">Research</a>
-            <a href="#teaching">Teaching</a>
-            <a href="#artwork">Artwork</a>
+            <ul>
+                <li><a href="#about">About Me</a></li>
+                <li><a href="#research">Research</a></li>
+                <li><a href="#teaching">Teaching</a></li>
+                <li><a href="#artwork">Artwork</a></li>
+            </ul>
         </nav>
+        <h1>Your Name</h1>
     </header>
 
-    <section id="about">
-        <h2>About Me</h2>
-        <p>
-            Hi, I'm a linguist with a passion for language, art, and education. 
-            Download my <a href="link-to-cv.pdf" target="_blank">CV</a>. 
-            I work under the supervision of <a href="link-to-advisor-profile" target="_blank">Advisor Name</a> at 
-            <a href="link-to-university" target="_blank">University Name</a>.
-        </p>
-    </section>
+    <main>
+        <section id="about" class="content-section">
+            <h2>About Me</h2>
+            <p>
+                Hi, I'm a linguist with a passion for language, art, and education. 
+                Download my <a href="link-to-cv.pdf" target="_blank">CV</a>. 
+                I work under the supervision of <a href="link-to-advisor-profile" target="_blank">Advisor Name</a> at 
+                <a href="link-to-university" target="_blank">University Name</a>.
+            </p>
+        </section>
 
-    <section id="research">
-        <h2>Research</h2>
-        <p>Details about your research interests.</p>
-    </section>
+        <section id="research" class="content-section">
+            <h2>Research</h2>
+            <p>Details about your research interests.</p>
+        </section>
 
-    <section id="teaching">
-        <h2>Teaching</h2>
-        <p>Courses taught, teaching philosophy, etc.</p>
-    </section>
+        <section id="teaching" class="content-section">
+            <h2>Teaching</h2>
+            <p>Courses taught, teaching philosophy, etc.</p>
+        </section>
 
-    <section id="artwork">
-        <h2>Artwork</h2>
-        <div class="gallery">
-            <img src="path-to-photo1.jpg" alt="Artwork 1">
-            <img src="path-to-photo2.jpg" alt="Artwork 2">
-        </div>
-    </section>
+        <section id="artwork" class="content-section">
+            <h2>Artwork</h2>
+            <div class="gallery">
+                <img src="path-to-photo1.jpg" alt="Artwork 1">
+                <img src="path-to-photo2.jpg" alt="Artwork 2">
+            </div>
+        </section>
+    </main>
 
     <footer>
         <p>© 2024 Your Name</p>
