--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
  Hi, I'm Juan Zhong, a second-year PhD student in linguistics at <a href="https://arts-sciences.buffalo.edu/linguistics.html">University at Buffalo</a>. I work on morphosyntax, pragmatics, and language documentation. Here is my <a href="/me/CV_JZ_20240918.pdf" target="_blank">CV</a>. Feel free to email me to discuss more about my research.
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -15,7 +14,7 @@
                 <li><a href="#about">About Me</a></li>
                 <li><a href="#research">Research</a></li>
                 <li><a href="#teaching">Teaching</a></li>
-                <li><a href="#artwork">Artwork</a></li>
+                <li><a href="artwork.html">Artwork</a></li> <!-- Link to the artwork page -->
             </ul>
         </nav>
         <h1>Your Name</h1>
@@ -40,14 +39,6 @@
         <section id="teaching" class="content-section">
             <h2>Teaching</h2>
             <p>Courses taught, teaching philosophy, etc.</p>
-        </section>
-
-        <section id="artwork" class="content-section">
-            <h2>Artwork</h2>
-            <div class="gallery">
-                <img src="path-to-photo1.jpg" alt="Artwork 1">
-                <img src="path-to-photo2.jpg" alt="Artwork 2">
-            </div>
         </section>
     </main>
 
