--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <li><a href="#about">About Me</a></li>
                 <li><a href="#research">Research</a></li>
                 <li><a href="#teaching">Teaching</a></li>
-                <li><a href="artwork.html">Artwork</a></li> <!-- Link to the artwork page -->
+                <li><a href="artwork.html">Artwork</a></li> <!-- Correct link to the artwork page -->
             </ul>
         </nav>
         <h1>Your Name</h1>
