--- a/artwork.html
+++ b/artwork.html
@@ -13,10 +13,11 @@
                 <li><a href="index.html">About Me</a></li>
                 <li><a href="index.html#research">Research</a></li>
                 <li><a href="index.html#teaching">Teaching</a></li>
+                                <li><a href="index.html#service">Teaching</a></li>
                 <li><a href="artwork.html">Artwork</a></li> <!-- Keep the link to the artwork page -->
             </ul>
         </nav>
-        <h1>Your Name - Artwork</h1>
+        <h1>Artwork</h1>
     </header>
 
     <main>
