--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="#research">Research</a></li>
                 <li><a href="#teaching">Teaching</a></li>
-                             <li><a href="#service">Teaching</a></li>
+                             <li><a href="#service">service</a></li>
                 <li><a href="artwork.html">Artwork</a></li> <!-- Correct link to the artwork page -->
             </ul>
         </nav>
@@ -32,7 +32,9 @@
               Hi, I'm a second-year PhD student in linguistics at <a href="https://arts-sciences.buffalo.edu/linguistics.html">University at Buffalo</a>. 
              Prior to UB, I obtained my bachelor degree in Teaching Chinese to Speakers of Other Languages from <a href="https://en.bfsu.edu.cn"> Beijing Foreign Studies University</a> and my master degree in East Aisan Languages and Cultures from <a href="http://ealac.columbia.edu"> Columbia University</a>. 
              I work on morphosyntax, pragmatics, and language documentation. I'm a member of the fieldwork group at UB.
-             In my free time, I enjoy cooking, painting, writing calliigrapgy, travelling, and shooting photos.
+            </p>
+            <p>
+                In my free time, I enjoy cooking, painting, writing calliigrapgy, travelling, and shooting photos.
              Here is my <a href="/me/CV_JZ_20240918.pdf" target="_blank">CV</a>. 
              Feel free to email me to discuss more about my work.
             </p>
@@ -40,15 +42,15 @@
 
         <section id="research" class="content-section">
             <h2>Research</h2>
-         <h3>morphosyntax</h3>
+         <h3>Morphosyntax</h3>
             <p>
              I am interested in complex compounding and how it provides a lens for understanding the boundary between morphology and syntax. Currently I am working on a formal analysis of the internal structure of dish names across languages, under the supervision of <a href="https://www.jeanpierrekoenig.com" target="_blank">Jean-Pierre Koenig</a>.
              </p>
-         <h3>language documentation</h3>
+         <h3>Language Documentation</h3>
                          <p>
              Born and raised in Anyuan, China, I speak Anyuan Hakka, a lesser-studied variety of the Hakka language that facing a rapid decline of speakers recent years. I have an ongoing collabrative project since 2021, in chich I work with the local community to document, analyze, preserve, and promote Anyuan Hakka.
                           </p>
-                  <h3>other research areas</h3>
+                  <h3>Other Research Areas</h3>
            <p>
              Previously, I have worked on language teaching pedagogy and second language acquisition.
             </p>
