--- a/artwork.html
+++ b/artwork.html
@@ -10,7 +10,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="index.html">About Me</a></li>
+                <li><a href="index.html">About</a></li>
                 <li><a href="index.html#research">Research</a></li>
                 <li><a href="index.html#teaching">Teaching</a></li>
                                 <li><a href="index.html#service">Teaching</a></li>
