--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <ul>
                 <li><a href="#about">About</a></li>
                 <li><a href="#research">Research</a></li>
+                                <li><a href="#publication">Research</a></li>
                 <li><a href="#teaching">Teaching</a></li>
                              <li><a href="#service">service</a></li>
                 <li><a href="artwork.html">Artwork</a></li> <!-- Correct link to the artwork page -->
@@ -61,7 +62,10 @@
            <p>
              Previously, I have worked on language teaching pedagogy and second language acquisition.
             </p>
-        </break>    
+                    </section>
+
+        
+        <section id="ppublication" class="content-section">
          <p> Zhong, J. Anyuan Hakka: An IPA illustration. (in prep.) </p>
           <p> Zhong, J. Chinese demonstrative gāi: A linguistic investigation and its pedagogical implications. The 5th International Forum on Linguistics and Chinese Education (IFOLCE-5), 4-7 October 2019, New York, United States. </p>
          <p> Zhong, J. A task-based program for teaching English to children of migrant workers in Beijing. The 8th International Conference on Task-Based Language Teaching. 19-21 August 2019, Ottawa, Canada. </p>        
