--- a/artwork.html
+++ b/artwork.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Artwork</title>
+    <title>Artwork</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -12,6 +12,7 @@
             <ul>
                 <li><a href="index.html">About</a></li>
                 <li><a href="index.html#research">Research</a></li>
+                                <li><a href="index.html#publication">Publication</a></li>
                 <li><a href="index.html#teaching">Teaching</a></li>
                                 <li><a href="index.html#service">Teaching</a></li>
                 <li><a href="artwork.html">Artwork</a></li> <!-- Keep the link to the artwork page -->
@@ -22,10 +23,34 @@
 
     <main>
         <section class="content-section">
-            <h2>Artwork</h2>
+            <h2>Anyuan</h2>
             <div class="gallery">
-                <img src="path-to-photo1.jpg" alt="Artwork 1">
-                <img src="path-to-photo2.jpg" alt="Artwork 2">
+                <img src="path-to-photo1.jpg" alt="train">
+                <img src="path-to-photo2.jpg" alt="">
+                <!-- Add more images as needed -->
+            </div>
+                      <h2>Beijing</h2>
+            <div class="gallery">
+                <img src="path-to-photo1.jpg" alt="train">
+                <img src="path-to-photo2.jpg" alt="">
+                <!-- Add more images as needed -->
+            </div>
+                                  <h2>Paris</h2>
+            <div class="gallery">
+                <img src="path-to-photo1.jpg" alt="train">
+                <img src="path-to-photo2.jpg" alt="">
+                <!-- Add more images as needed -->
+            </div>
+                                              <h2>NYC</h2>
+            <div class="gallery">
+                <img src="path-to-photo1.jpg" alt="train">
+                <img src="path-to-photo2.jpg" alt="">
+                <!-- Add more images as needed -->
+            </div>
+                                                          <h2>...</h2>
+            <div class="gallery">
+                <img src="path-to-photo1.jpg" alt="train">
+                <img src="path-to-photo2.jpg" alt="">
                 <!-- Add more images as needed -->
             </div>
         </section>
