--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <li><a href="#research">Research</a></li>
                                 <li><a href="#publication">Publication</a></li>
                 <li><a href="#teaching">Teaching</a></li>
-                             <li><a href="#service">service</a></li>
+                             <li><a href="#service">Service</a></li>
                 <li><a href="artwork.html">Artwork</a></li> <!-- Correct link to the artwork page -->
             </ul>
         </nav>
@@ -66,7 +66,7 @@
 
         
   <section id="publication" class="content-section">
-            <h2>publication</h2>
+            <h2>Publication</h2>
          <p> Zhong, J. Anyuan Hakka: An IPA illustration. (in prep.) </p>
           <p> Zhong, J. Chinese demonstrative gāi: A linguistic investigation and its pedagogical implications. The 5th International Forum on Linguistics and Chinese Education (IFOLCE-5), 4-7 October 2019, New York, United States. </p>
          <p> Zhong, J. A task-based program for teaching English to children of migrant workers in Beijing. The 8th International Conference on Task-Based Language Teaching. 19-21 August 2019, Ottawa, Canada. </p>        
@@ -88,7 +88,7 @@
         </section>
 
         <section id="service" class="content-section">
-            <h2>service</h2> 
+            <h2>Service</h2> 
          <p>Board of Directors Member, Graduate Linguistic Association, University at Buffalo, SUNY, 2022-2023. </p>
                 <p>Program Assistant, Chinese Language Program, Columbia University, 2019-2021. </p>
                          <p>Coordinator Assistant, Chinese Language Program, Columbia University, 2018-2021. </p>
