--- a/artwork.html
+++ b/artwork.html
@@ -14,7 +14,7 @@
                 <li><a href="index.html#research">Research</a></li>
                                 <li><a href="index.html#publication">Publication</a></li>
                 <li><a href="index.html#teaching">Teaching</a></li>
-                                <li><a href="index.html#service">Teaching</a></li>
+                                <li><a href="index.html#service">Service</a></li>
                 <li><a href="artwork.html">Artwork</a></li> <!-- Keep the link to the artwork page -->
             </ul>
         </nav>
