--- a/artwork.html
+++ b/artwork.html
@@ -23,15 +23,17 @@
 
     <main>
         <section class="content-section">
-            <h2>Anyuan</h2>
+            <h2>shades</h2>
             <div class="gallery">
-                <img src="path-to-photo1.jpg" alt="train">
-                <img src="path-to-photo2.jpg" alt="">
+
+                <img src="theMET.jpg" alt="">
+                              <img src="kent423.jpg" alt="train">
+                                <img src="anyuan.jpg" alt="train">
                 <!-- Add more images as needed -->
             </div>
                       <h2>Beijing</h2>
             <div class="gallery">
-                <img src="path-to-photo1.jpg" alt="train">
+  
                 <img src="path-to-photo2.jpg" alt="">
                 <!-- Add more images as needed -->
             </div>
