--- a/artwork.html
+++ b/artwork.html
@@ -12,9 +12,9 @@
             <ul>
                 <li><a href="index.html">About</a></li>
                 <li><a href="index.html#research">Research</a></li>
-                                <li><a href="index.html#publication">Publication</a></li>
+                <li><a href="index.html#publication">Publication</a></li>
                 <li><a href="index.html#teaching">Teaching</a></li>
-                                <li><a href="index.html#service">Service</a></li>
+                <li><a href="index.html#service">Service</a></li>
                 <li><a href="artwork.html">Artwork</a></li> <!-- Keep the link to the artwork page -->
             </ul>
         </nav>
@@ -25,7 +25,7 @@
         <section class="content-section">
             <h2>shades</h2>
             <div class="gallery">
-
+                <img src="theMET.jpg" alt="at the MET">
                 <img src="theMET.jpg" alt="">
                               <img src="kent423.jpg" alt="train">
                                 <img src="anyuan.jpg" alt="train">
