--- a/artwork.html
+++ b/artwork.html
@@ -25,36 +25,12 @@
         <section class="content-section">
             <h2>shades</h2>
             <div class="gallery">
-                <img src="theMET.jpg" alt="at the MET">
-                <img src="theMET.jpg" alt="">
-                              <img src="kent423.jpg" alt="train">
-                                <img src="anyuan.jpg" alt="train">
+                <img src="theMET.JPG" alt="shade: the MET">
+                <img src="kent423.JPG" alt="shades: Kent Hall 423">
+                <img src="anyuan.JPG" alt="shades: Anyuan">
                 <!-- Add more images as needed -->
             </div>
-                      <h2>Beijing</h2>
-            <div class="gallery">
-  
-                <img src="path-to-photo2.jpg" alt="">
-                <!-- Add more images as needed -->
-            </div>
-                                  <h2>Paris</h2>
-            <div class="gallery">
-                <img src="path-to-photo1.jpg" alt="train">
-                <img src="path-to-photo2.jpg" alt="">
-                <!-- Add more images as needed -->
-            </div>
-                                              <h2>NYC</h2>
-            <div class="gallery">
-                <img src="path-to-photo1.jpg" alt="train">
-                <img src="path-to-photo2.jpg" alt="">
-                <!-- Add more images as needed -->
-            </div>
-                                                          <h2>...</h2>
-            <div class="gallery">
-                <img src="path-to-photo1.jpg" alt="train">
-                <img src="path-to-photo2.jpg" alt="">
-                <!-- Add more images as needed -->
-            </div>
+    
         </section>
     </main>
 
