--- a/artwork.html
+++ b/artwork.html
@@ -28,6 +28,10 @@
                 <img src="theMET.JPG" alt="shade: the MET">
                 <img src="kent423.JPG" alt="shades: Kent Hall 423">
                 <img src="anyuan.JPG" alt="shades: Anyuan">
+            <h2>colors</h2>
+                <img src="tulip.JPG" alt="colors: tulip">
+                <img src="singapore.JPG" alt="colors: singapore">
+                <img src="seattle.JPG" alt="colors: seattle">
                 <!-- Add more images as needed -->
             </div>
     
