--- a/artwork.html
+++ b/artwork.html
@@ -28,8 +28,10 @@
                 <img src="theMET.JPG" alt="shade: the MET">
                 <img src="kent423.JPG" alt="shades: Kent Hall 423">
                 <img src="anyuan.JPG" alt="shades: Anyuan">
+                        </section>
+ <section class="content-section">
             <h2>colors</h2>
-                <img src="tulip.JPG" alt="colors: tulip">
+                <img src="tulip.jpg" alt="colors: tulip">
                 <img src="singapore.JPG" alt="colors: singapore">
                 <img src="seattle.JPG" alt="colors: seattle">
                 <!-- Add more images as needed -->
