--- a/artwork.html
+++ b/artwork.html
@@ -28,9 +28,11 @@
                 <img src="theMET.JPG" alt="shade: the MET">
                 <img src="kent423.JPG" alt="shades: Kent Hall 423">
                 <img src="anyuan.JPG" alt="shades: Anyuan">
+                 </div>
                         </section>
  <section class="content-section">
             <h2>colors</h2>
+      <div class="gallery">
                 <img src="tulip.jpg" alt="colors: tulip">
                 <img src="singapore.JPG" alt="colors: singapore">
                 <img src="seattle.JPG" alt="colors: seattle">
