--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             
          <h3>Language Documentation</h3>
                          <p>
-             Born and raised in Anyuan, China, I speak Anyuan Hakka, a lesser-studied variety of the Hakka language that facing a rapid decline of speakers recent years. I have an ongoing collabrative project since 2021, in chich I work with the local community to document, analyze, preserve, and promote Anyuan Hakka.
+             Born and raised in Anyuan, China, I speak Anyuan Hakka, a lesser-studied variety of the Hakka language facing with a rapid decline of speakers recent years. I have an ongoing collabrative project since 2021, in chich I work with the local community to document, analyze, preserve, and promote Anyuan Hakka.
                           </p>
             
          <h3>Other Research Areas</h3>
