--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
         <h3> 钟娟/鍾娟 </h3>
         <h3> she/her </h3>
         <h3> juanzhon AT buffalo DOT edu </h3>
+        <h3> <a href="https://juan-zhong.github.io/me/">juan-zhong.github.io/me</a> </h3>
+        
      
     </header>
 
