--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 
     <main>
         <section id="about" class="content-section">
-            <h2>About</h2>
+            <h2>Hi~</h2>
             <p>
-              Hi, I'm a second-year PhD student in linguistics at <a href="https://arts-sciences.buffalo.edu/linguistics.html">University at Buffalo</a>. 
+              I'm a second-year PhD student in linguistics at <a href="https://arts-sciences.buffalo.edu/linguistics.html">University at Buffalo</a>. 
                 Prior to UB, I obtained my bachelor degree in Teaching Chinese to Speakers of Other Languages from <a href="https://en.bfsu.edu.cn"> Beijing Foreign Studies University</a> and my master degree in East Aisan Languages and Cultures from <a href="http://ealac.columbia.edu"> Columbia University</a>. 
                    I work on morphosyntax, pragmatics, and language documentation, and I'm a member of the fieldwork group at UB.
                 In my free time, I enjoy cooking, painting, writing calliigrapgy, travelling, and shooting photos.
