--- a/artwork.html
+++ b/artwork.html
@@ -19,6 +19,7 @@
             </ul>
         </nav>
         <h1>Artwork</h1>
+        <h3> I am interested in capturing the composiiton of light, shade, and shape through my phone camera. I also take photos as a way to document everyday life.</h3>
     </header>
 
     <main>
