--- a/index.html
+++ b/index.html
@@ -30,11 +30,10 @@
 
     <main>
         <section id="about" class="content-section">
-            <h2>Hi~</h2>
             <p>
-              I'm a second-year PhD student in linguistics at <a href="https://arts-sciences.buffalo.edu/linguistics.html">University at Buffalo</a>. 
-                Prior to UB, I obtained my bachelor degree in Teaching Chinese to Speakers of Other Languages from <a href="https://en.bfsu.edu.cn"> Beijing Foreign Studies University</a> and my master degree in East Aisan Languages and Cultures from <a href="http://ealac.columbia.edu"> Columbia University</a>. 
-                   I work on morphosyntax, pragmatics, and language documentation, and I'm a member of the fieldwork group at UB.
+              Hi, I'm a second-year PhD student in linguistics at <a href="https://arts-sciences.buffalo.edu/linguistics.html">University at Buffalo</a> and a member of the fieldwork group at UB.
+                Prior to UB, I obtained my bachelor's degree in Teaching Chinese to Speakers of Other Languages from <a href="https://en.bfsu.edu.cn"> Beijing Foreign Studies University</a> and my master's degree in East Aisan Languages and Cultures from <a href="http://ealac.columbia.edu"> Columbia University</a>.
+                My research interests include morphosyntax, pragmatics, and language documentation,
                 In my free time, I enjoy cooking, painting, writing calliigrapgy, travelling, and shooting photos.
                 Here is my <a href="/me/CV_JZ_20240918.pdf" target="_blank">CV</a>. 
                  Feel free to email me to discuss more about my work.
@@ -45,12 +44,12 @@
             <h2>Research</h2>
          <h3>Morphosyntax</h3>
             <p>
-             I am interested in complex compounding and how it provides a lens for understanding the boundary between morphology and syntax. Currently I am working on a formal analysis of the internal structure of dish names across languages, under the supervision of <a href="https://www.jeanpierrekoenig.com" target="_blank">Jean-Pierre Koenig</a>.
+             I am interested in how complex compounding provides a lens for understanding the boundary between morphology and syntax. Currently I am working on a formal analysis of the internal structure of dish names across languages under the supervision of <a href="https://www.jeanpierrekoenig.com" target="_blank">Jean-Pierre Koenig</a> for my QP.
              </p>
             
          <h3>Language Documentation</h3>
                          <p>
-             Born and raised in Anyuan, China, I speak Anyuan Hakka, a lesser-studied variety of the Hakka language facing with a rapid decline of speakers recent years. I have an ongoing collabrative project since 2021, in which I work with the local community to document, analyze, preserve, and promote Anyuan Hakka.
+             I was born and raised in <a href="https://en.wikipedia.org/wiki/Anyuan_County" target="_blank">Anyuan</a>, China, and I speak Anyuan Hakka, a lesser-studied variety of the Hakka language. Since 2021, I have initiated an ongoing Hakka documenttaion project, in which I collaborate with the local community members to document, analyze, and promote the language.
                           </p>
             
          <h3>Other Research Areas</h3>
