--- a/artwork.html
+++ b/artwork.html
@@ -19,8 +19,8 @@
             </ul>
         </nav>
         <h1>Artwork</h1>
-        <h3> I am interested in capturing the composiiton of light, shade, and shape through my phone camera. </h3>
-           <h3>    I also take photos as a way to document everyday life.</h3>
+        <h3> I am interested in the composiiton of light, shade, and shape, and how mood can be translated into it. </h3>
+           <h3> I also use my phone camera to document everyday life.</h3>
     </header>
 
     <main>
