--- a/artwork.html
+++ b/artwork.html
@@ -25,19 +25,26 @@
 
     <main>
         <section class="content-section">
-            <h2>shades</h2>
             <div class="gallery">
                 <img src="theMET.JPG" alt="shade: the MET">
                 <img src="kent423.JPG" alt="shades: Kent Hall 423">
-                <img src="anyuan.JPG" alt="shades: Anyuan">
+                <img src="light.JPG" alt="shades: lightn">
+                 </div>
+                        </section>
+                <section class="content-section">
+            <h2>light</h2>
+            <div class="gallery">
+                <img src="yellowred.JPG" alt="shade: the MET">
+                <img src="seattle.JPG" alt="colors: seattle">
+                <img src="la.jpg" alt="shades: Anyuan">
                  </div>
                         </section>
  <section class="content-section">
             <h2>colors</h2>
       <div class="gallery">
-                <img src="tulip.jpg" alt="colors: tulip">
+                <img src="moonriver.jpg" alt="colors: tulip">
                 <img src="singapore.JPG" alt="colors: singapore">
-                <img src="seattle.JPG" alt="colors: seattle">
+                <img src="anyuan.JPG" alt="shades: Kent Hall 423">
                 <!-- Add more images as needed -->
             </div>
     
