--- a/artwork.html
+++ b/artwork.html
@@ -53,6 +53,7 @@
                 <h2>motion II</h2>
             <div class="gallery">
                 <img src="motion.HEIC" alt="shade: the MET">
+                <img src="men.heic" alt="shade: the MET">
                  </div>
                         </section>
 
