--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
               Hi, I'm a second-year PhD student in linguistics at <a href="https://arts-sciences.buffalo.edu/linguistics.html">University at Buffalo</a> and a member of the fieldwork group at UB.
                 Prior to UB, I obtained my bachelor's degree in Teaching Chinese to Speakers of Other Languages from <a href="https://en.bfsu.edu.cn"> Beijing Foreign Studies University</a> and my master's degree in East Aisan Languages and Cultures from <a href="http://ealac.columbia.edu"> Columbia University</a>.
                 My research interests include morphosyntax, pragmatics, and language documentation,
-                In my free time, I enjoy cooking, painting, writing calliigrapgy, travelling, and shooting photos.
+                In my free time, I enjoy cooking, painting, writing calligraphy, travelling, and shooting photos.
                 Here is my <a href="/me/CV_JZ_20240918.pdf" target="_blank">CV</a>. 
                  Feel free to email me to discuss more about my work.
             </p>
