--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <section id="teaching" class="content-section">
             <h2>Teaching</h2>
             <h3>linguistics courses</h3>
-                     <p>Instructor of record, Introduction to Linguistic Analysis (2024 Fall). Department of Linguistics, University at Buffalo, SUNY. </p>
+                     <p>Instructor of Record, Introduction to Linguistic Analysis (2024 Fall). Department of Linguistics, University at Buffalo, SUNY. </p>
               <p>Teaching Assistant, Language, Society, and Individuals instructed by Brian Hayden (2024 Spring). Department of Linguistics, University at Buffalo, SUNY. </p>
                     <p>Teaching Assistant, Introduction to Linguistic Analysis instructed by EunHee Lee (2023 Fall). Department of Linguistics, University at Buffalo, SUNY. </p>
                
