--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <section id="about" class="content-section">
             <p>
               Hi, I'm a second-year PhD student in linguistics at <a href="https://arts-sciences.buffalo.edu/linguistics.html">University at Buffalo</a> and a member of the fieldwork group at UB.
-                Prior to UB, I obtained my bachelor's degree in Teaching Chinese to Speakers of Other Languages from <a href="https://en.bfsu.edu.cn"> Beijing Foreign Studies University</a> and my master's degree in East Aisan Languages and Cultures from <a href="http://ealac.columbia.edu"> Columbia University</a>.
+                Prior to UB, I obtained my bachelor's degree in Teaching Chinese to Speakers of Other Languages from <a href="https://en.bfsu.edu.cn"> Beijing Foreign Studies University</a> and my master's degree in East Asian Languages and Cultures from <a href="http://ealac.columbia.edu"> Columbia University</a>.
                 My research interests include morphosyntax, pragmatics, and language documentation,
                 In my free time, I enjoy cooking, painting, writing calligraphy, travelling, and shooting photos.
                 Here is my <a href="/me/CV_JZ_20240918.pdf" target="_blank">CV</a>. 
@@ -71,13 +71,13 @@
         <section id="teaching" class="content-section">
             <h2>Teaching</h2>
             <h3>linguistics courses</h3>
-                     <p>Instructor of Record, Introduction to Linguistic Analysis (2024 Fall). Department of Linguistics, University at Buffalo, SUNY. </p>
-              <p>Teaching Assistant, Language, Society, and Individuals instructed by Brian Hayden (2024 Spring). Department of Linguistics, University at Buffalo, SUNY. </p>
-                    <p>Teaching Assistant, Introduction to Linguistic Analysis instructed by EunHee Lee (2023 Fall). Department of Linguistics, University at Buffalo, SUNY. </p>
+                     <p>Introduction to Linguistic Analysis (2024 Fall), Instructor of Record, Department of Linguistics, University at Buffalo, SUNY. </p>
+              <p>Language, Society, and Individuals instructed by Brian Hayden (2024 Spring), Teaching Assistant, Department of Linguistics, University at Buffalo, SUNY. </p>
+                    <p>Introduction to Linguistic Analysis instructed by EunHee Lee (2023 Fall), Teaching Assistant, Department of Linguistics, University at Buffalo, SUNY. </p>
                
             <h3>language courses</h3>
-                                <p>Adjunct Lecturer, First Year Chinese II (2022 Spring) and Third Year Chinese N (2021 Fall). Chinese Language Program, Columbia University.</p>
-                                         <p>Teaching Assistant, First Year Chinese N I-II, Third Year Chinese N I-II, Fourth Year Chinese Adv I, Fifth Year Chinese I, Intermediate Chinese I-II, Advanced Chinese I-II, Business Chinese I-II, and Advanced Business Chinese (2017-2021). Chinese Language Program, Columbia University.</p>
+                                <p>First Year Chinese II (2022 Spring) and Third Year Chinese N (2021 Fall), Adjunct Lecturer, Chinese Language Program, Columbia University.</p>
+                                         <p>First Year Chinese N I-II, Third Year Chinese N I-II, Fourth Year Chinese Adv I, Fifth Year Chinese I, Intermediate Chinese I-II, Advanced Chinese I-II, Business Chinese I-II, and Advanced Business Chinese (2017-2021), Teaching Assistant, Chinese Language Program, Columbia University.</p>
 
         </section>
 
