--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
          <p>Board of Directors Member, Graduate Linguistic Association, University at Buffalo, SUNY, 2022-2023. </p>
                 <p>Program Assistant, Chinese Language Program, Columbia University, 2019-2021. </p>
                          <p>Coordinator Assistant, Chinese Language Program, Columbia University, 2018-2021. </p>
-                                  <p>Associate Director, Alumni Association - Beijing Chapter, Center for International Foreign Language Teacher Education (CIFLTE), 2017-2019.</p>
+                                  <p>Associate Director, Alumni Association - Beijing Chapter, <a href="https://www.tc.columbia.edu/arts-and-humanities/tcsol-certificate/">Center for International Foreign Language Teacher Education (CIFLTE)</a>, 2017-2019.</p>
          
                  </section>
      
