--- a/artwork.html
+++ b/artwork.html
@@ -33,7 +33,7 @@
                         </section>
 
                 <section class="content-section">
-                <h2>liveliness</h2>
+                <h2>life</h2>
             <div class="gallery">
                 <img src="tulip.jpg" alt="colors: singapore">
                 <img src="rainbow.JPG" alt="colors: singapore">
