--- a/artwork.html
+++ b/artwork.html
@@ -11,8 +11,8 @@
         <nav>
         </nav>
         <h1>Artwork</h1>
-        <h3> I use my phone camera to document everyday living experiences.</h3>
-    <h3> My work examines how lights, shades, and shapes interact and integrate, and how moods transmit and transform through it. </h3>
+        <p> I use my phone camera to document everyday living experiences. My work examines how lights, shades, and shapes interact and integrate, and how moods transmit and transform through it.
+    </p>
     </header>
 
     <main>
