--- a/artwork.html
+++ b/artwork.html
@@ -11,10 +11,11 @@
         <nav>
         </nav>
         <h1>Artwork</h1>
-        <p> I use my phone camera to document everyday living experiences. My work examines how lights, shades, and shapes interact and integrate, and how moods transmit and transform through it.
-    </p>
     </header>
-
+     <section>
+     <p> I use my phone camera to document everyday living experiences. My work examines how lights, shades, and shapes interact and integrate, and how moods transmit and transform through it.
+    </p>
+ </section>
     <main>
 
         <section class="content-section">
